--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fw",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -8,6 +8,7 @@
     "test": "./node_modules/.bin/gulp test; ./node_modules/.bin/gulp clean"
   },
   "author": "",
+  "typings": "./dist/fw.d.ts",
   "license": "ISC",
   "dependencies": {
     "vue": "1.0.24"
@@ -16,7 +17,7 @@
     "babel-polyfill": "^6.13.0",
     "chai": "^3.5.0",
     "del": "^2.2.1",
-    "dts-generator": "^1.7.0",
+    "dts-generator": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^5.2.1",
     "gulp-clean": "^0.3.2",
@@ -26,7 +27,7 @@
     "istanbul": "^0.4.4",
     "mocha": "^3.0.2",
     "run-sequence": "^1.2.1",
-    "typescript": "1.8.9",
+    "typescript": "^2.0.9",
     "vinyl-paths": "^2.1.0"
   }
 }
