--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fw",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,7 @@
   "typings": "./dist/fw.d.ts",
   "license": "ISC",
   "dependencies": {
-    "vue": "1.0.24"
+    "vue": "2.3.4"
   },
   "devDependencies": {
     "babel-polyfill": "^6.13.0",
@@ -27,7 +27,7 @@
     "istanbul": "^0.4.4",
     "mocha": "^3.0.2",
     "run-sequence": "^1.2.1",
-    "typescript": "2.0.9",
+    "typescript": "^2.3.4",
     "vinyl-paths": "^2.1.0"
   }
 }
