--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fw",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -14,12 +14,15 @@
     "vue": "2.3.4"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.13.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "del": "^2.2.1",
     "dts-generator": "^2.0.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^5.2.1",
+    "gulp-babel": "^7.0.0",
     "gulp-clean": "^0.3.2",
     "gulp-replace": "^0.5.4",
     "gulp-spawn-mocha": "^3.0.0",
