--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "fw",
   "version": "0.3.3",
-  "description": "",
+  "description": "a class based api for vue2. includes routing and simple DI.",
   "main": "dist/index.js",
   "scripts": {
     "build": "./node_modules/.bin/gulp build",
     "test": "./node_modules/.bin/gulp test; ./node_modules/.bin/gulp clean"
   },
-  "author": "",
+  "author": "Derek Pittsinger",
   "typings": "./dist/fw.d.ts",
   "license": "ISC",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "vue": "2.5.16"
   },
