--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-  "name": "@derekpitt/fw",
-  "version": "0.3.10",
+  "name": "@slideroom/fw",
+  "version": "0.3.11",
   "description": "a class based api for vue2. includes routing and simple DI.",
-  "main": "dist/index.js",
   "scripts": {
-    "build": "./node_modules/.bin/gulp build",
-    "test": "./node_modules/.bin/gulp test; ./node_modules/.bin/gulp clean"
+    "rollup": "rollup -c",
+    "build": "npm run clean && rollup -c --sourcemap",
+    "clean": "rimraf dist",
+    "prepublish": "npm run build"
   },
   "author": "Derek Pittsinger",
   "typings": "./dist/fw.d.ts",
   "license": "ISC",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
+  "types": "dist/index.d.ts",
+  "repository": "https://github.com/slideroom/fw",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/slideroom"
+  },
   "dependencies": {
-    "vue": "2.5.16"
+    "vue": "^3.1.0",
+    "@vue/compat": "^3.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "chai": "^3.5.0",
-    "del": "^2.2.1",
-    "dts-generator": "^2.0.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
-    "gulp-clean": "^0.3.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-spawn-mocha": "^3.0.0",
-    "gulp-typescript": "^2.13.6",
-    "istanbul": "^0.4.4",
-    "mocha": "^5.2.0",
-    "run-sequence": "^1.2.1",
-    "typescript": "^2.8.3",
-    "vinyl-paths": "^2.1.0"
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@rollup/plugin-terser": "^0.2.1",
+    "@rollup/plugin-typescript": "^10.0.1",
+    "@vue/compiler-sfc": "^3.1.1",
+    "rollup": "^3.8.0",
+    "rollup-plugin-dts": "^5.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "typescript": "^4.3.4",
+    "vue-tsc": "^0.2.0"
   }
 }
