--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json && esbuild src/index.ts --bundle --sourcemap --target=es2022 --format=esm --outfile=dist/index.bundle.js",
+    "build": "tsc -p tsconfig.json",
     "test": "tsc --noEmit && node --import tsx --test test/**/*.ts"
   },
   "author": "Derek Pittsinger",
@@ -19,7 +19,6 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
-    "esbuild": "^0.23.0",
     "reflect-metadata": "^0.2.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
