Fixed script loading errors by not having import file extensions.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a class based api for vue2. includes routing and simple DI.",
   "type": "module",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
