--- a/package.json
+++ b/package.json
@@ -1,39 +1,27 @@
 {
   "name": "@derekpitt/fw",
-  "version": "0.3.10",
+  "version": "0.4.0",
   "description": "a class based api for vue2. includes routing and simple DI.",
+  "type": "module",
   "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "./node_modules/.bin/gulp build",
-    "test": "./node_modules/.bin/gulp test; ./node_modules/.bin/gulp clean"
+    "build": "tsc -p tsconfig.json",
+    "test": "tsc --noEmit && node --import tsx --test test/**/*.ts"
   },
   "author": "Derek Pittsinger",
-  "typings": "./dist/fw.d.ts",
   "license": "ISC",
   "files": [
     "dist"
   ],
   "dependencies": {
-    "vue": "2.5.16"
+    "vue": "^2.6.14"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "chai": "^3.5.0",
-    "del": "^2.2.1",
-    "dts-generator": "^2.0.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
-    "gulp-clean": "^0.3.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-spawn-mocha": "^3.0.0",
-    "gulp-typescript": "^2.13.6",
-    "istanbul": "^0.4.4",
-    "mocha": "^5.2.0",
-    "run-sequence": "^1.2.1",
-    "typescript": "^2.8.3",
-    "vinyl-paths": "^2.1.0"
+    "@types/node": "^20.14.10",
+    "reflect-metadata": "^0.2.2",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3"
   }
 }
